# despensa-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 20260404_0001_initial_schema.py  20260405_0002_shopping_list_items.py  20260406_0003_auth_logout_token_version.py  20260410_0004_shopping_list_item_estimated_price.py
app/: main.py
app/api/: deps.py  responses.py  router.py
app/api/routes/: auth.py  health.py  households.py  inventory.py  overview.py  receipts.py  shopping_list.py
app/core/: config.py  exception_handlers.py  exceptions.py  security.py
app/models/: __init__.py  household.py  inventory.py  product.py  receipt.py  shopping_list.py  user.py
app/schemas/: auth.py  common.py  households.py  inventory.py  overview.py  receipts.py  shopping_list.py
app/services/: auth.py  gemini_scan.py  households.py  inventory.py  overview.py  receipts.py  shopping_list.py
docs/: gemini_receipt_scan_prompt.md
tests/: test_gemini_scan.py  test_receipts_category.py
