[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestor-despensa-api"
version = "0.1.0"
description = "FastAPI backend for household pantry management with AI-assisted receipt extraction."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "google-auth>=2.38,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pyjwt>=2.10,<3.0",
  "requests>=2.32,<3.0",
  "python-multipart>=0.0.20,<0.1",
  "sqlalchemy>=2.0.38,<3.0",
  "unidecode>=1.3,<2.0",
  "uvicorn[standard]>=0.34,<1.0",
  "email-validator>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
